fix modal behind stuff

--- a/public/scss/sections/login-signup-modal.scss
+++ b/public/scss/sections/login-signup-modal.scss
@@ -1,7 +1,6 @@
 /* LOGIN SIGNUP MODAL */
 
 .login-signup-modal{
-  z-index: 100;
 }
 
 .modal-header {
